--- a/apps.html
+++ b/apps.html
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="graphic">
-          <img class="ronnie-hero" src="/assets/img/rfr-ronnie-hero.png" alt="Red Flag Ronnie illustration" />
+          <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie illustration" />
         </div>
       </div>
     </section>
