--- a/apps.html
+++ b/apps.html
@@ -109,64 +109,71 @@
 <body>
   <div id="header-placeholder"></div>
 
-  <main id="main">
-    <section class="hero">
-      <div class="container hero-split">
-        <div class="content">
-          <div class="headline-hook">RED FLAG RONNIE</div>
-          <h1 class="hero-subtitle">SABOTEURS</h1>
-          <p class="small" style="max-width:480px">
-            Ronnie spots the chaos before you do. From missed actions to buried risks — he's already on it.
-          </p>
-          <div style="margin-top:1.5rem">
-            <a class="button primary" href="#tools">Explore Tools</a>
-            <a class="button ghost" href="/contact.html">Early Access List</a>
-          </div>
-        </div>
-        <div class="graphic">
-          <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie illustration" />
+ <main id="main">
+  <section class="hero">
+    <div class="container hero-split">
+      <div class="content">
+        <div class="headline-hook">RED FLAG RONNIE</div>
+        <h1 class="hero-subtitle">SABOTEURS</h1>
+        <p class="small" style="max-width:480px">
+          Ronnie calls out chaos before it spreads. Missed deadlines, buried blockers, subtle sabotage — he flags it fast.
+        </p>
+        <div style="margin-top:1.5rem">
+          <a class="button primary" href="#tools">Explore Tools</a>
+          <a class="button ghost" href="/contact.html">Join the Early Access List</a>
         </div>
       </div>
-    </section>
-
-    <section class="section" id="tools">
-      <div class="container home-grid">
-        <article class="card">
-          <div class="card-top">
-            <h3>Transcript Analyzer</h3>
-            <span class="badge live">Live</span>
-          </div>
-          <p class="small">Auto-extract <strong>Actions, Risks, Decisions</strong> from raw meetings in <strong>seconds</strong>.</p>
-          <div class="card-actions">
-            <a class="button primary" href="#">Open</a>
-            <a class="button ghost" href="#">Docs</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card-top">
-            <h3>Status Report Generator</h3>
-            <span class="badge soon">Q4 2025</span>
-          </div>
-          <p class="small">Get <strong>VP-ready summaries</strong> exported as PDF or Markdown in one click.</p>
-          <div class="card-actions">
-            <a class="button ghost" href="/contact.html">Notify Me</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card-top">
-            <h3>Risk Radar</h3>
-            <span class="badge soon">Coming Soon</span>
-          </div>
-          <p class="small">Auto-detect critical project risks — and get <strong>AI-backed mitigation tips</strong>.</p>
-          <div class="card-actions">
-            <a class="button ghost" href="/contact.html">Notify Me</a>
-          </div>
-        </article>
+      <div class="graphic">
+        <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie illustration" />
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
+
+  <section class="section" id="tools">
+    <div class="container home-grid">
+      <article class="card">
+        <div class="card-top">
+          <h3>Transcript Analyzer</h3>
+          <span class="badge live">Live</span>
+        </div>
+        <p class="small">
+          Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
+        </p>
+        <div class="card-actions">
+          <a class="button primary" href="#">Open</a>
+          <a class="button ghost" href="#">Docs</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="card-top">
+          <h3>Status Report Generator</h3>
+          <span class="badge soon">Q4 2025</span>
+        </div>
+        <p class="small">
+          Generate <strong>VP-ready status reports</strong> as polished PDFs or Markdown — no formatting fuss.
+        </p>
+        <div class="card-actions">
+          <a class="button ghost" href="/contact.html">Notify Me</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="card-top">
+          <h3>Risk Radar</h3>
+          <span class="badge soon">Coming Soon</span>
+        </div>
+        <p class="small">
+          Auto-scan project data to detect hidden risks and get <strong>AI-backed mitigation tips</strong> before it’s too late.
+        </p>
+        <div class="card-actions">
+          <a class="button ghost" href="/contact.html">Notify Me</a>
+        </div>
+      </article>
+    </div>
+  </section>
+</main>
+
 
   <div id="footer-placeholder"></div>
 
