--- a/apps.html
+++ b/apps.html
@@ -109,67 +109,75 @@
 <body>
   <div id="header-placeholder"></div>
 
- <main id="main">
+<main id="main">
+  <!-- Ronnie Hero Section -->
   <section class="hero">
     <div class="container hero-split">
       <div class="content">
-        <div class="headline-hook">RED FLAG RONNIE</div>
-        <h1 class="hero-subtitle">SABOTEURS</h1>
-        <p class="small" style="max-width:480px">
-          Ronnie calls out chaos before it spreads. Missed deadlines, buried blockers, subtle sabotage — he flags it fast.
+        <div class="headline-hook">Red Flag Ronnie™</div>
+        <h1 class="hero-subtitle">Saboteur Detection</h1>
+        <p class="small" style="max-width: 480px">
+          Missed deadlines, buried blockers, silent sabotage — Ronnie flags it before it spreads. No drama. No delay.
         </p>
         <div style="margin-top:1.5rem">
-          <a class="button primary" href="#tools">Explore Tools</a>
-          <a class="button ghost" href="/contact.html">Join the Early Access List</a>
+          <a class="button primary" href="#tools">Try the Analyzer</a>
+          <a class="button ghost" href="/contact.html">Get Early Access</a>
         </div>
       </div>
       <div class="graphic">
-        <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie illustration" />
+        <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie™ mascot illustration" />
       </div>
     </div>
   </section>
 
+  <!-- Tools Section -->
   <section class="section" id="tools">
-    <div class="container home-grid">
-      <article class="card">
-        <div class="card-top">
-          <h3>Transcript Analyzer</h3>
-          <span class="badge live">Live</span>
-        </div>
-        <p class="small">
-          Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
-        </p>
-        <div class="card-actions">
-          <a class="button primary" href="#">Open</a>
-          <a class="button ghost" href="#">Docs</a>
-        </div>
-      </article>
+    <div class="container">
+      <h2 class="section-title" style="margin-bottom: 2rem;">Tools That Fight Chaos</h2>
+      <div class="home-grid">
+        <!-- Transcript Analyzer -->
+        <article class="card">
+          <div class="card-top">
+            <h3>Transcript Analyzer</h3>
+            <span class="badge live">Live</span>
+          </div>
+          <p class="small">
+            Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
+          </p>
+          <div class="card-actions">
+            <a class="button primary" href="#">Open</a>
+            <a class="button ghost" href="#">Docs</a>
+          </div>
+        </article>
 
-      <article class="card">
-        <div class="card-top">
-          <h3>Status Report Generator</h3>
-          <span class="badge soon">Q4 2025</span>
-        </div>
-        <p class="small">
-          Generate <strong>VP-ready status reports</strong> as polished PDFs or Markdown — no formatting fuss.
-        </p>
-        <div class="card-actions">
-          <a class="button ghost" href="/contact.html">Notify Me</a>
-        </div>
-      </article>
+        <!-- Status Report Generator -->
+        <article class="card">
+          <div class="card-top">
+            <h3>Status Report Generator</h3>
+            <span class="badge soon">Q4 2025</span>
+          </div>
+          <p class="small">
+            Generate <strong>VP-ready reports</strong> as polished PDFs or Markdown — no formatting fuss, no manual effort.
+          </p>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html">Notify Me</a>
+          </div>
+        </article>
 
-      <article class="card">
-        <div class="card-top">
-          <h3>Risk Radar</h3>
-          <span class="badge soon">Coming Soon</span>
-        </div>
-        <p class="small">
-          Auto-scan project data to detect hidden risks and get <strong>AI-backed mitigation tips</strong> before it’s too late.
-        </p>
-        <div class="card-actions">
-          <a class="button ghost" href="/contact.html">Notify Me</a>
-        </div>
-      </article>
+        <!-- Risk Radar -->
+        <article class="card">
+          <div class="card-top">
+            <h3>Risk Radar</h3>
+            <span class="badge soon">Coming Soon</span>
+          </div>
+          <p class="small">
+            Auto-scan your project for silent risks — and get <strong>AI-backed mitigation tips</strong> before it’s too late.
+          </p>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html">Notify Me</a>
+          </div>
+        </article>
+      </div>
     </div>
   </section>
 </main>
