--- a/apps.html
+++ b/apps.html
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="graphic">
-        <img class="ronnie-hero" src="/assets/img/rfr-apps.png" alt="Red Flag Ronnie™ mascot illustration" />
+        <img class="ronnie-hero" src="/assets/img/rfr-apps-trans.png" alt="Red Flag Ronnie™ mascot illustration" />
       </div>
     </div>
   </section>
