--- a/apps.html
+++ b/apps.html
@@ -20,10 +20,10 @@
     .hero-split {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
+      align-items: flex-end;
       justify-content: space-between;
       gap: 2rem;
-      padding: 3rem 0;
+      padding: 3rem 0 2rem 0;
     }
 
     .hero-split .content {
@@ -31,12 +31,12 @@
     }
 
     .hero-split .graphic {
-      flex: 1 1 300px;
+      flex: 1 1 360px;
       text-align: center;
     }
 
     .ronnie-hero {
-      max-width: 280px;
+      max-width: 360px;
       margin: 0 auto;
     }
 
@@ -89,6 +89,7 @@
       background-color: #1e2a41;
       color: #9aa4b2;
     }
+
     .badge.live { background-color: #40d27833; color: #40d278; }
     .badge.soon { background-color: #b8753d33; color: #b8753d; }
 
@@ -181,7 +182,6 @@
     </div>
   </section>
 </main>
-
 
   <div id="footer-placeholder"></div>
 
