--- a/apps.html
+++ b/apps.html
@@ -17,29 +17,30 @@
   <link rel="stylesheet" href="/styles.css" />
 
   <style>
-   .hero-split {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center; /* ← was flex-end */
-  justify-content: space-between;
-  gap: 2rem;
-  padding: 4rem 0 2rem;
-}
+    .hero-split {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
+      gap: 2rem;
+      padding: 3.5rem 0 1.5rem;
+    }
 
-.hero-split .graphic {
-  flex: 1 1 360px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    .hero-split .content {
+      flex: 1 1 360px;
+    }
 
-.ronnie-hero {
-  max-width: 320px;        /* smaller width than before */
-  height: auto;
-  object-fit: contain;
-  margin-top: 1rem;
-}
+    .hero-split .graphic {
+      flex: 1 1 300px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+    }
 
+    .ronnie-hero {
+      max-width: 280px;
+      margin-top: 1rem;
+    }
 
     .headline-hook {
       color: var(--accent);
@@ -57,11 +58,23 @@
       margin-top: 0;
     }
 
+    .section-divider {
+      border: 0;
+      border-top: 1px solid var(--border);
+      margin: 2rem auto 0 auto;
+      max-width: 820px;
+    }
+
+    .section-title {
+      text-align: center;
+      margin: 3rem auto 2rem;
+    }
+
     .home-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
-      margin-top: 3rem;
+      margin-top: 2rem;
     }
 
     .card {
@@ -111,78 +124,81 @@
 <body>
   <div id="header-placeholder"></div>
 
-<main id="main">
-  <!-- Ronnie Hero Section -->
-  <section class="hero">
-    <div class="container hero-split">
-      <div class="content">
-        <div class="headline-hook">Red Flag Ronnie™</div>
-        <h1 class="hero-subtitle">Saboteur Detection</h1>
-        <p class="small" style="max-width: 480px">
-          Missed deadlines, buried blockers, silent sabotage — Ronnie flags it before it spreads. No drama. No delay.
-        </p>
-        <div style="margin-top:1.5rem">
-          <a class="button primary" href="#tools">Try the Analyzer</a>
-          <a class="button ghost" href="/contact.html">Get Early Access</a>
+  <main id="main">
+    <!-- Ronnie Hero Section -->
+    <section class="hero">
+      <div class="container hero-split">
+        <div class="content">
+          <div class="headline-hook">Red Flag Ronnie™</div>
+          <h1 class="hero-subtitle">Saboteur Detection</h1>
+          <p class="small" style="max-width: 480px">
+            Missed deadlines, buried blockers, silent sabotage — Ronnie flags it before it spreads. No drama. No delay.
+          </p>
+          <div style="margin-top:1.5rem">
+            <a class="button primary" href="#tools">Try the Analyzer</a>
+            <a class="button ghost" href="/contact.html">Get Early Access</a>
+          </div>
+        </div>
+        <div class="graphic">
+          <img class="ronnie-hero" src="/assets/img/rfr-apps-trans.png" alt="Red Flag Ronnie™ mascot illustration" />
         </div>
       </div>
-      <div class="graphic">
-        <img class="ronnie-hero" src="/assets/img/rfr-apps-trans.png" alt="Red Flag Ronnie™ mascot illustration" />
+    </section>
+
+    <!-- Divider -->
+    <hr class="section-divider" />
+
+    <!-- Tools Section -->
+    <section class="section" id="tools">
+      <div class="container">
+        <h2 class="section-title">Tools That Fight Chaos</h2>
+        <div class="home-grid">
+          <!-- Transcript Analyzer -->
+          <article class="card">
+            <div class="card-top">
+              <h3>Transcript Analyzer</h3>
+              <span class="badge live">Live</span>
+            </div>
+            <p class="small">
+              Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
+            </p>
+            <div class="card-actions">
+              <a class="button primary" href="#">Open</a>
+              <a class="button ghost" href="#">Docs</a>
+            </div>
+          </article>
+
+          <!-- Status Report Generator -->
+          <article class="card">
+            <div class="card-top">
+              <h3>Status Report Generator</h3>
+              <span class="badge soon">Q4 2025</span>
+            </div>
+            <p class="small">
+              Generate <strong>VP-ready reports</strong> as polished PDFs or Markdown — no formatting fuss, no manual effort.
+            </p>
+            <div class="card-actions">
+              <a class="button ghost" href="/contact.html">Notify Me</a>
+            </div>
+          </article>
+
+          <!-- Risk Radar -->
+          <article class="card">
+            <div class="card-top">
+              <h3>Risk Radar</h3>
+              <span class="badge soon">Coming Soon</span>
+            </div>
+            <p class="small">
+              Auto-scan your project for silent risks — and get <strong>AI-backed mitigation tips</strong> before it’s too late.
+            </p>
+            <div class="card-actions">
+              <a class="button ghost" href="/contact.html">Notify Me</a>
+            </div>
+          </article>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Tools Section -->
-  <section class="section" id="tools">
-    <div class="container">
-      <h2 class="section-title" style="margin-bottom: 2rem;">Tools That Fight Chaos</h2>
-      <div class="home-grid">
-        <!-- Transcript Analyzer -->
-        <article class="card">
-          <div class="card-top">
-            <h3>Transcript Analyzer</h3>
-            <span class="badge live">Live</span>
-          </div>
-          <p class="small">
-            Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
-          </p>
-          <div class="card-actions">
-            <a class="button primary" href="#">Open</a>
-            <a class="button ghost" href="#">Docs</a>
-          </div>
-        </article>
-
-        <!-- Status Report Generator -->
-        <article class="card">
-          <div class="card-top">
-            <h3>Status Report Generator</h3>
-            <span class="badge soon">Q4 2025</span>
-          </div>
-          <p class="small">
-            Generate <strong>VP-ready reports</strong> as polished PDFs or Markdown — no formatting fuss, no manual effort.
-          </p>
-          <div class="card-actions">
-            <a class="button ghost" href="/contact.html">Notify Me</a>
-          </div>
-        </article>
-
-        <!-- Risk Radar -->
-        <article class="card">
-          <div class="card-top">
-            <h3>Risk Radar</h3>
-            <span class="badge soon">Coming Soon</span>
-          </div>
-          <p class="small">
-            Auto-scan your project for silent risks — and get <strong>AI-backed mitigation tips</strong> before it’s too late.
-          </p>
-          <div class="card-actions">
-            <a class="button ghost" href="/contact.html">Notify Me</a>
-          </div>
-        </article>
-      </div>
-    </div>
-  </section>
-</main>
+    </section>
+  </main>
 
   <div id="footer-placeholder"></div>
 
