--- a/apps.html
+++ b/apps.html
@@ -23,7 +23,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 2rem;
-      padding: 3.5rem 0 1.5rem;
+      padding: 2rem 0 0.5rem;
     }
 
     .hero-split .content {
@@ -35,11 +35,13 @@
       display: flex;
       justify-content: center;
       align-items: flex-start;
+      margin-top: 0;
     }
 
     .ronnie-hero {
       max-width: 280px;
-      margin-top: 1rem;
+      max-height: 280px;
+      margin-top: 0.5rem;
     }
 
     .headline-hook {
@@ -61,13 +63,13 @@
     .section-divider {
       border: 0;
       border-top: 1px solid var(--border);
-      margin: 2rem auto 0 auto;
+      margin: 1.5rem auto 0 auto;
       max-width: 820px;
     }
 
     .section-title {
       text-align: center;
-      margin: 3rem auto 2rem;
+      margin: 2.5rem auto 1.5rem;
     }
 
     .home-grid {
