--- a/apps.html
+++ b/apps.html
@@ -20,7 +20,7 @@
     .hero-split {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
+      align-items: flex-end;
       justify-content: space-between;
       gap: 2rem;
       padding: 2rem 0 0.5rem;
@@ -28,19 +28,19 @@
 
     .hero-split .content {
       flex: 1 1 360px;
+      max-width: 460px;
     }
 
     .hero-split .graphic {
-      flex: 1 1 300px;
+      flex: 1 1 320px;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      margin-top: 0;
+      align-items: flex-end;
     }
 
     .ronnie-hero {
-      max-width: 280px;
-      max-height: 280px;
+      max-height: 360px;
+      width: auto;
       margin-top: 0.5rem;
     }
 
@@ -112,6 +112,22 @@
     .card-actions .button + .button {
       margin-left: 0.5rem;
     }
+
+    @media (max-width: 768px) {
+      .hero-split {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+      }
+
+      .hero-split .graphic {
+        align-items: center;
+      }
+
+      .ronnie-hero {
+        max-height: 280px;
+      }
+    }
   </style>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
@@ -133,7 +149,7 @@
         <div class="content">
           <div class="headline-hook">Red Flag Ronnie™</div>
           <h1 class="hero-subtitle">Saboteur Detection</h1>
-          <p class="small" style="max-width: 480px">
+          <p class="small">
             Missed deadlines, buried blockers, silent sabotage — Ronnie flags it before it spreads. No drama. No delay.
           </p>
           <div style="margin-top:1.5rem">
