--- a/apps.html
+++ b/apps.html
@@ -17,116 +17,105 @@
   <link rel="stylesheet" href="/styles.css" />
 
   <style>
-    .hero-split {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: flex-end;
-      justify-content: space-between;
-      gap: 2rem;
-      padding: 2rem 0 0.5rem;
+    /* ---------- Hero layout ---------- */
+    .hero-split{
+      display:flex;
+      flex-wrap:wrap;
+      align-items:center;          /* lift copy to center with the bigger graphic */
+      justify-content:space-between;
+      gap:2.25rem;
+      padding:2.25rem 0 .75rem;
+    }
+    .hero-split .content{
+      flex:1 1 360px;
+      max-width:520px;             /* give copy a touch more room */
+    }
+    .hero-split .graphic{
+      flex:1 1 420px;              /* prioritize space for larger Ronnie */
+      display:flex;
+      justify-content:center;
+      align-items:flex-end;
+      position:relative;
+      isolation:isolate;           /* keeps halo behind Ronnie only */
     }
 
-    .hero-split .content {
-      flex: 1 1 360px;
-      max-width: 460px;
+    /* ---------- Ronnie size + pop ---------- */
+    .ronnie-wrap{
+      position:relative;
+    }
+    .ronnie-wrap::before{
+      content:"";
+      position:absolute;
+      inset:auto -6% -4% -6%;      /* subtle overspill halo */
+      height:70%;
+      margin:auto;
+      background:radial-gradient(ellipse at 50% 70%,
+                 rgba(184,117,61,.20) 0%, rgba(184,117,61,.06) 40%,
+                 rgba(0,0,0,0) 70%);
+      filter:blur(18px);
+      z-index:-1;
+      pointer-events:none;
+    }
+    .ronnie-hero{
+      max-height:520px;            /* ~1.7–2x bigger than before */
+      width:auto;
+      margin-top:.25rem;
+      filter: drop-shadow(0 12px 24px rgba(0,0,0,.35));
     }
 
-    .hero-split .graphic {
-      flex: 1 1 320px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
+    /* ---------- Type & section polish (unchanged copy) ---------- */
+    .headline-hook{
+      color:var(--accent);
+      font-weight:bold;
+      font-size:1rem;
+      text-transform:uppercase;
+      margin-bottom:.5rem;
+      letter-spacing:1px;
     }
-
-    .ronnie-hero {
-      max-height: 360px;
-      width: auto;
-      margin-top: 0.5rem;
+    .hero-subtitle{
+      font-size:2.15rem;
+      font-weight:700;
+      color:var(--ink);
+      margin-top:0;
     }
-
-    .headline-hook {
-      color: var(--accent);
-      font-weight: bold;
-      font-size: 1rem;
-      text-transform: uppercase;
-      margin-bottom: 0.5rem;
-      letter-spacing: 1px;
+    .section-divider{
+      border:0;
+      border-top:1px solid var(--border);
+      margin:1.75rem auto 0;
+      max-width:920px;
     }
-
-    .hero-subtitle {
-      font-size: 2rem;
-      font-weight: 700;
-      color: var(--ink);
-      margin-top: 0;
+    .section-title{
+      text-align:center;
+      margin:2.5rem auto 1.5rem;
     }
-
-    .section-divider {
-      border: 0;
-      border-top: 1px solid var(--border);
-      margin: 1.5rem auto 0 auto;
-      max-width: 820px;
+    .home-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+      gap:2rem;
+      margin-top:2rem;
     }
-
-    .section-title {
-      text-align: center;
-      margin: 2.5rem auto 1.5rem;
+    .card{
+      background-color:var(--panel);
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:1.5rem;
+      transition:transform .2s ease, box-shadow .2s ease;
     }
+    .card:hover{ transform:translateY(-6px); box-shadow:0 8px 20px rgba(0,0,0,.25); }
+    .card-top{ display:flex; align-items:center; justify-content:space-between; }
+    .badge{ font-size:.7rem; padding:.2em .6em; border-radius:999px; background:#1e2a41; color:#9aa4b2; }
+    .badge.live{ background:#40d27833; color:#40d278; }
+    .badge.soon{ background:#b8753d33; color:#b8753d; }
+    .card-actions .button + .button{ margin-left:.5rem; }
 
-    .home-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
+    /* ---------- Responsive ---------- */
+    @media (max-width: 992px){
+      .ronnie-hero{ max-height:440px; }
     }
-
-    .card {
-      background-color: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-    }
-
-    .card-top {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .badge {
-      font-size: 0.7rem;
-      padding: 0.2em 0.6em;
-      border-radius: 999px;
-      background-color: #1e2a41;
-      color: #9aa4b2;
-    }
-
-    .badge.live { background-color: #40d27833; color: #40d278; }
-    .badge.soon { background-color: #b8753d33; color: #b8753d; }
-
-    .card-actions .button + .button {
-      margin-left: 0.5rem;
-    }
-
-    @media (max-width: 768px) {
-      .hero-split {
-        flex-direction: column-reverse;
-        align-items: center;
-        text-align: center;
-      }
-
-      .hero-split .graphic {
-        align-items: center;
-      }
-
-      .ronnie-hero {
-        max-height: 280px;
-      }
+    @media (max-width: 768px){
+      .hero-split{ flex-direction:column-reverse; align-items:center; text-align:center; }
+      .hero-split .graphic{ align-items:center; }
+      .ronnie-hero{ max-height:340px; }
     }
   </style>
 
@@ -157,8 +146,11 @@
             <a class="button ghost" href="/contact.html">Get Early Access</a>
           </div>
         </div>
+
         <div class="graphic">
-          <img class="ronnie-hero" src="/assets/img/rfr-apps-trans.png" alt="Red Flag Ronnie™ mascot illustration" />
+          <div class="ronnie-wrap">
+            <img class="ronnie-hero" src="/assets/img/rfr-apps-trans.png" alt="Red Flag Ronnie™ mascot illustration" />
+          </div>
         </div>
       </div>
     </section>
@@ -178,7 +170,7 @@
               <span class="badge live">Live</span>
             </div>
             <p class="small">
-              Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks & Decisions</strong> — in seconds.
+              Turn raw meeting transcripts into <strong>instant summaries</strong> with <strong>Actions, Risks &amp; Decisions</strong> — in seconds.
             </p>
             <div class="card-actions">
               <a class="button primary" href="#">Open</a>
@@ -221,18 +213,17 @@
   <div id="footer-placeholder"></div>
 
   <script>
-    async function includeHTML(selector, file) {
+    async function includeHTML(selector, file){
       const el = document.querySelector(selector);
-      if (!el) return;
-      try {
+      if(!el) return;
+      try{
         const res = await fetch(file);
-        if (!res.ok) throw new Error(`Could not load ${file}`);
+        if(!res.ok) throw new Error(`Could not load ${file}`);
         el.innerHTML = await res.text();
-      } catch (err) {
+      }catch(err){
         console.error(err);
       }
     }
-
     includeHTML("#header-placeholder", "/partials/header.html");
     includeHTML("#footer-placeholder", "/partials/footer.html");
   </script>
