--- a/apps.html
+++ b/apps.html
@@ -24,7 +24,7 @@
       align-items:center;          /* lift copy to center with the bigger graphic */
       justify-content:space-between;
       gap:2.25rem;
-      padding:2.25rem 0 .75rem;
+      padding:2rem 0 0rem;         /* tightened (was 2.25rem 0 .75rem) */
     }
     .hero-split .content{
       flex:1 1 360px;
@@ -81,12 +81,12 @@
     .section-divider{
       border:0;
       border-top:1px solid var(--border);
-      margin:1.75rem auto 0;
+      margin:1rem auto 0;          /* tightened (was 1.75rem auto 0) */
       max-width:920px;
     }
     .section-title{
       text-align:center;
-      margin:2.5rem auto 1.5rem;
+      margin:1.5rem auto 1rem;     /* tightened (was 2.5rem auto 1.5rem) */
     }
     .home-grid{
       display:grid;
